--- a/about.html
+++ b/about.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 
-<html>
+<html lang="en">
 <head>
 	<title>About</title>
 	<link rel="stylesheet"  href="stylesheet.css">
 </head>
 <body>
 	<nav>
-	<h4>About&nbsp;&nbsp; |
+	About&nbsp;&nbsp;&#124;
 			
 		<a href="portfolio.html">Portfolio</a>
 
-	</h4>
+	
 		<h1>Jacqueline Green</h1><hr>
 	</nav>
 	<main>
@@ -19,11 +19,7 @@
 		<h3>I ENJOY LIFE AS A DEVELOPER!</h3>
 		<p>I'm Jacqueline Green, a Developer based in LA. I Have ten years of experience in the graphic design world, specializing in the creation of responsive websites.</p>
 	</main>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
+	
 	<br>
 	<hr>
 	<footer><h6>
