--- a/portfolio.html
+++ b/portfolio.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 	<title>Portfolio</title>
 	<link rel="stylesheet"  href="stylesheet.css">
 </head>
 <body>
 	<nav>
-		<h4>
-		<a href="about.html">About</a>&nbsp;&nbsp;
-		Portfolio</h4>
+		
+		<a href="about.html">About</a>&nbsp;&nbsp;&#124;
+		Portfolio
 		<h1>Jacqueline Green</h1><hr>
 	</nav>	
 	<main>
