Portfolio in progress

--- a/about.html
+++ b/about.html
@@ -5,29 +5,37 @@
 	<title>About</title>
 	<link rel="stylesheet"  href="stylesheet.css">
 </head>
-<body>
-	<nav>
-	About&nbsp;&nbsp;&#124;
-			
-		<a href="portfolio.html">Portfolio</a>
 
-	
-		<h1>Jacqueline Green</h1><hr>
+<body id="home">
+	<header>
+
+	</header>
+
+	<nav>
+		<p>About | <a href="portfolio.html">Portfolio</a></p>
+		<h1>Jacqueline Green-Nortey</h1>
 	</nav>
-	<main>
-		<img src="#" align="left">
-		<h3>I ENJOY LIFE AS A DEVELOPER!</h3>
-		<p>I'm Jacqueline Green, a Developer based in LA. I Have ten years of experience in the graphic design world, specializing in the creation of responsive websites.</p>
-	</main>
+		
 	
-	<br>
-	<hr>
-	<footer><h6>
+	<section id="primary">
+		<div id="image">
+			
+		</div>
+		<div id="bio">
+			
+		</div>
+	</section>
+
+	<section id="secondary">
+		
+	</section>
+
+	<footer>
 		<a href="#">Facebook</a>&nbsp;&nbsp;
 		<a href="#">Instagram</a>&nbsp;&nbsp; 
 		<a href="#">Twitter</a>&nbsp;&nbsp; 
 		<a href="#">LinkedIn</a>&nbsp;&nbsp;<br>
-		&#169; 2017
-	</h6></footer>
+		<p>&copy; Copyright 2017. Orchid Black Lotus Blue, LLC.</p>
+	</footer>
 	</body>
 </html>
