--- a/portfolio.html
+++ b/portfolio.html
@@ -4,23 +4,33 @@
 	<title>Portfolio</title>
 	<link rel="stylesheet"  href="stylesheet.css">
 </head>
-<body>
+`<header>
+
+	</header>
+
 	<nav>
+		<p><a href="about.html">About</a> | Portfolio</p>
+		<h1>Jacqueline Green-Nortey</h1>
+	</nav>
 		
-		<a href="about.html">About</a>&nbsp;&nbsp;&#124;
-		Portfolio
-		<h1>Jacqueline Green</h1><hr>
-	</nav>	
-	<main>
-		 <img src=".../images/citipix_deliverable.png" alt="citipix_deliverable";>
-	</main>
-	<hr>
+	
+	<section id="primary">
+		<div>
+			
+		</div>
+	</section>
+
+	<section id="secondary">
+		
+	</section>
+<body id="portfolio">
+	
 	<footer>
 		<a href="#">Facebook</a>&nbsp;&nbsp;
 		<a href="#">Instagram</a>&nbsp;&nbsp; 
 		<a href="#">Twitter</a>&nbsp;&nbsp; 
 		<a href="#">LinkedIn</a>&nbsp;&nbsp;<br>
-		&#169; 2017
+		<p>&copy; Copyright 2017. Orchid Black Lotus Blue, LLC.</p>
 	</footer>
 </body>
 </html>
